Fix for bug#11766256, and particularly its relatives/duplicates bug#11751026 and bug#11765274.

Fixes the problem that complex queries containing a lot of EQ_REF'ed 
joined tables takes 'forever' to produce a query plan.
            
The fix depends on the fact that when a table is
joined by an unique key there is a 1::1 relation
between the rows being joined. Assuming we have multiple
such 1::1 (star-)joined relations in a sequence, 
without other join types inbetween. Then all of 
these 'eq_ref-joins' will be calculated to return the excact 
same #rows and having identical 'cost' (or 'read_time').
      
This leads to that we can append such a contigous sequence
of eq_ref-joins to a partial plan in any order without 
affecting the total cost of the query plan. Exploring the
different permutations of these eq_refs in the 'greedy' 
optimizations will simply be a waste of precious CPU cycles.
            
This chain of eq_refs can further be handled as a single
entity wrt. the full 'greedy' exploration of the possible
join plans. This will reduce the 'N' in the O(N!) complexity
of the full greedy search.
            
The method ::eq_ref_extension_by_limited_search() has been 
implemented doing as described above. Once an EQ_REF joined 
table is encountered, it is invoked to append any remaining 
EQ_REFs to the join plan. This chain of EQ_REFs will then 
act like a single entity in the further exploration of possible
join plans.
            
It should be noted that ::best_extension_by_limited_search()
will still explore the other plans starting with non-EQ_REF 
operations as possibly better alternatives to the EQ_REF-extended 
query plan.
            
Usage of ::eq_ref_extension_by_limited_search() is 
controlled by 'optimizer_prune_level=1'. 
            
This fix also introduce the method ::plan_is_complete() which
contains common functionality between ::best_extension_by_limited_search()
and ::eq_ref_extension_by_limited_search()
            
greedy_optimizer.test has been extensively extended with new testcases 
containing lots of EQ_REF's.
            
No existing test/query plans are expected to change as result of this fix.
It should only produce the 'best' plan (a lot!) faster. - Like the 
testcase for bug#58225 which now completes the QEP in ~0.05s in my
DEBUG compiled sandbox (With 'optimizer_search_depth= 62'). This
previously took  63min+42.437s :-o

This extention to the greedy optimizer has been implemented by
Ole John Aske.